python/testData/quickFixes/PyAddImportQuickFixTest/beforeStatementAboveNoInspectionComment/main.py
#noinspection PyUnresolvedReferences
print(no_so)
<error descr="Unresolved reference 'a'"><caret>a</error>